[package]
description = "A synchronous subset of the AWS SDK."
edition = "2021"
keywords = ["aws", "sdk", "sync"]
license = "MIT"
name = "minaws"
repository = "https://github.com/cloudboss/minaws"
version = "0.1.0"

[dependencies]
aws-credential-types = "1.2.1"
aws-sigv4 = "1.2.4"
aws-smithy-runtime-api = "1.7.2"
chrono = { default-features = false, version = "0.4.38", features = ["serde", "std"] }
serde = { default-features = false, version = "1.0.205", features = ["derive"] }
serde_json = { default-features = false, version = "1.0.122", features = ["std"] }
serde_with = { default-features = false, version = "3.9.0", features = ["macros"] }
serde-xml-rs = "0.6.0"
ureq = "2.10.1"
once_cell = "1.20.2"
